--- a/app/src/main/res/layout/diary_show_delete_alterdialog.xml
+++ b/app/src/main/res/layout/diary_show_delete_alterdialog.xml
@@ -14,7 +14,7 @@
             android:fontFamily="@font/font_main"
             android:gravity="center"
             android:padding="10dp"
-            android:text="@string/diaryTempSave"
+            android:text="@string/diaryDelete"
             android:textColor="@color/main_color"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -27,26 +27,14 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/font_main"
             android:layout_marginTop="30dp"
-            android:text="@string/saveConfirmMessage"
+            android:text="@string/deleteConfirmMessage"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
-        <TextView
-            android:id="@+id/textView20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/font_main"
-            android:text="@string/saveConfirmCautionMessage"
-            android:textColor="@color/red"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView19" />
-
         <Button
-            android:id="@+id/diary_write_save_cancelButton"
+            android:id="@+id/diary_show_delete_cancelButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -57,10 +45,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView20" />
+            app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
         <Button
-            android:id="@+id/diary_write_save_confirmButton"
+            android:id="@+id/diary_show_delete_confirmButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/main_subColor"
@@ -68,8 +56,7 @@
             android:text="@string/confirm"
             android:textColor="@color/main_color"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/diary_write_save_cancelButton"
-            app:layout_constraintTop_toTopOf="@+id/diary_write_save_cancelButton" />
-
+            app:layout_constraintStart_toEndOf="@+id/diary_show_delete_cancelButton"
+            app:layout_constraintTop_toTopOf="@+id/diary_show_delete_cancelButton" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
