--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,8 +15,8 @@
     <color name="backgroundTransparency">#00ff0000</color>
     //Chart Angry Count Color
     <color name="angry_1">#FF8A80</color>
-    <color name="angry_2">#FF80AB</color>
-    <color name="angry_3">#EA80FC</color>
-    <color name="angry_4">#B388FF</color>
-    <color name="angry_5">#8C9EFF</color>
+    <color name="angry_2">#F6877D</color>
+    <color name="angry_3">#E74D4E</color>
+    <color name="angry_4">#FA1744</color>
+    <color name="angry_5">#C10808</color>
 </resources>
