DiaryShow Spinner Adapter Add

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,6 +15,7 @@
         <item>@string/angryDegree5</item>
     </string-array>
     <string-array name="diaryShowSpinnerMenu">
+        <item>""</item>
         <item>@string/spinnerMenuUpdate</item>
         <item>@string/spinnerMenuDelete</item>
     </string-array>
