Angry Icon & Color Update

--- a/app/src/main/res/layout/count_complete_dialog.xml
+++ b/app/src/main/res/layout/count_complete_dialog.xml
@@ -86,7 +86,7 @@
                     android:fontFamily="@font/font_main"
                     android:gravity="center"
                     android:text="@string/angryDegree1"
-                    android:textColor="@color/gray"
+                    android:textColor="@color/angry_1"
                     android:textSize="20sp"
                     tools:ignore="NestedWeights" />
 
