--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="pieChartColor">
-        <item>@color/gray</item>
+        <item>@color/angry_1</item>
         <item>@color/angry_2</item>
         <item>@color/angry_3</item>
         <item>@color/angry_4</item>
