--- a/app/src/main/res/layout/diary_show_layout.xml
+++ b/app/src/main/res/layout/diary_show_layout.xml
@@ -18,7 +18,8 @@
             android:backgroundTint="@color/backgroundTransparency"
             android:src="@drawable/icon_back_arrow"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/backArrowDescription" />
 
         <TextView
             android:id="@+id/diary_title"
@@ -129,7 +130,7 @@
                     android:fontFamily="@font/font_main"
                     android:gravity="center"
                     android:text="@string/angryDegree1"
-                    android:textColor="@color/gray" />
+                    android:textColor="@color/angry_1" />
 
                 <TextView
                     android:layout_width="0dp"
