--- a/app/src/main/res/layout/setting_diary_layout.xml
+++ b/app/src/main/res/layout/setting_diary_layout.xml
@@ -89,10 +89,9 @@
                 android:id="@+id/setting_diary_tempSave_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:thumbTint="@color/main_color"
-                app:trackTint="@color/main_subColor"
-                android:drawableTint="@color/main_color"
-                android:buttonTint="@color/main_color"
+                android:thumb="@drawable/switch_thumb"
+                app:track="@drawable/switch_track"
+                android:layout_marginEnd="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
